package in.itkaran.bikerenting_080824.models;

public enum BillStatus {
    PAID,
    PENDING
}
