package in.itkaran.bikerenting_080824.models;

public enum FuelType {
    PETROL,
    DIESEL,
    ELECTRIC
}
