package in.itkaran.bikerenting_080824.models;

public enum PaymentStatus {
    PENDING,
    SUCCESS,
    FAILURE
}
