package in.itkaran.bikerenting_080824.models;

public enum RentalStatus {
    ACTIVE,
    ENDED,
    CANCELLED
}
