package in.itkaran.bikerenting_080824.models;

public enum SizeType {
    SMALL, MEDIUM, LARGE
}
