package in.itkaran.bikerenting_080824.models;

public enum VehicleStatus {
    AVAILABLE,
    BOOKED,
    DAMAGED,
}
