package in.itkaran.bikerenting_080824.models;

public enum VehicleType {
    BIKE,
    SCOOTER,
}
